Fixed the problem of availability work-hours calendar drag&drop on Chrome and IE, only worked for Firefox; to disable selection and default drag&drop (that breaks the code) needs a bit more code on that browsers #454

--- a/web/Styles/app/app.css
+++ b/web/Styles/app/app.css
@@ -33,6 +33,15 @@
     font-style: normal;
 }
 
+[draggable=true] {
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 /*
  * HTML5 ✰ Boilerplate
  *
