--- a/web/Styles/common.css
+++ b/web/Styles/common.css
@@ -1,4 +1,4 @@
-/*! Loconomics.com 2014-02-25
+/*! Loconomics.com 2014-02-26
    Author: Loconomics Inc. */
 @font-face {
     font-family: 'Hand Of Sean';
@@ -33,6 +33,15 @@
          url('fonts/altehaasgroteskbold.svg#AlteHaasGroteskBold') format('svg');
     font-weight: bold;
     font-style: normal;
+}
+
+[draggable=true] {
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 /*
@@ -3216,12 +3225,12 @@ label.visuallyhidden-with-placeholder{
     left:-999em;
 }
 
-/*! Loconomics.com 2014-02-25
+/*! Loconomics.com 2014-02-26
    Author: Loconomics Inc. */
 
 /* line 1 : C:\Users\Iago\Proxectos\Loconomics.com\source\web\node_modules\grunt-contrib-stylus\node_modules\stylus\lib\functions\index.styl */
 
-/* line 18 : C:\Users\Iago\Proxectos\Loconomics.com\source\web\Styles\app\app-includes.styl */
+/* line undefined : C:\Users\Iago\Proxectos\Loconomics.com\source\web\Styles\app\app-includes.styl */
 /**
   app-includes is just a forward look to generate the app.css file with Stylus,
   this gets compiled and concatenated with app.css (and others) in the generation of common.css.
